<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <ImageView
            android:id="@+id/edit_item_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/image_prompt" />

        <View
            android:id="@+id/blur_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:background="@android:color/black"
            android:visibility="gone" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            android:onClick="insertImage"
            android:tint="@color/white"
            app:srcCompat="@drawable/camera_icon" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Label -->
                    <TextView
                        style="@style/CategoryStyle"
                        android:text="@string/category_overview" />

                    <!-- Input fields -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:paddingStart="4dp">

                        <!-- Name field -->
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_item_name"
                                style="@style/EditorFieldStyle"
                                android:hint="@string/hint_item_name"
                                android:inputType="textCapWords" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <!-- Quantity field -->
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_item_quantity"
                                style="@style/EditorFieldStyle"
                                android:hint="@string/hint_item_quantity"
                                android:inputType="numberSigned" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <!-- Price field -->
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:prefixText="$">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_item_price"
                                style="@style/EditorFieldStyle"
                                android:hint="@string/hint_item_price"
                                android:inputType="numberDecimal" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

                <!-- Description category -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="32dp">

                    <!-- Label -->
                    <TextView
                        style="@style/CategoryStyle"
                        android:text="@string/category_description" />

                    <!-- Description -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:paddingStart="4dp">

                        <!-- Description field -->
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_item_description"
                                style="@style/EditorFieldStyle"
                                android:hint="@string/hint_item_description"
                                android:inputType="textCapWords" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

                <!-- Tags category -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="32dp">

                    <!-- Label -->
                    <TextView
                        style="@style/CategoryStyle"
                        android:text="@string/category_tag" />

                    <!-- Tag fields -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:paddingStart="4dp">

                        <!-- Tag 1 -->
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_item_tag1"
                                style="@style/EditorFieldStyle"
                                android:hint="@string/hint_item_tag1"
                                android:inputType="textCapWords" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <!-- Tag 2 -->
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_item_tag2"
                                style="@style/EditorFieldStyle"
                                android:hint="@string/hint_item_tag2"
                                android:inputType="textCapWords" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <!-- Tag 3 -->
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_item_tag3"
                                style="@style/EditorFieldStyle"
                                android:hint="@string/hint_item_tag3"
                                android:inputType="textCapWords" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
