<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- card view to display info -->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:foreground="@drawable/ripple_effect"
        >

        <!-- this linear layout contains all info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_margin"
            android:weightSum="100"
            >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            >

            <ImageView
                android:id="@+id/item_thumbnail"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:visibility="gone"
				/>

            <!-- first child is the product name -->
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?attr/colorOnSurface"
                />

            <TextView
                android:id="@+id/summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginTop="2dp"
                android:visibility="gone"
                />

        </LinearLayout>
            <!-- second child contains the product info -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="45"
                android:orientation="vertical"
                >

                <!-- quantity text -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/quantity_icon"
                        app:tint="@color/colorAccent"
                        android:adjustViewBounds="true"
                        android:maxWidth="24dp"
                        android:maxHeight="24dp"
                        android:paddingRight="8dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cardview_quantity_label"
                        android:fontFamily="sans-serif"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textSize="11sp"
                        android:textColor="?android:attr/textColorSecondary"
                        />

                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingLeft="4dp"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textSize="11sp"
                        android:textColor="?android:attr/textColorSecondary"
                        />

                </LinearLayout>

                <!-- price text -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/price_icon"
                        app:tint="@color/colorAccent"
                        android:adjustViewBounds="true"
                        android:maxWidth="24dp"
                        android:maxHeight="24dp"
                        android:paddingRight="8dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cardview_price_label"
                        android:fontFamily="sans-serif"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textSize="11sp"
                        android:textColor="?android:attr/textColorSecondary"
                        />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingLeft="4dp"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textSize="11sp"
                        android:textColor="?android:attr/textColorSecondary"
                        />

                </LinearLayout>

				<LinearLayout
					android:id="@+id/size_layout"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="4dp"
					android:orientation="horizontal"
					android:gravity="center_vertical"
					android:visibility="gone"
					>

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/size_icon"
						app:tint="@color/colorAccent"
						android:adjustViewBounds="true"
						android:maxWidth="24dp"
						android:maxHeight="24dp"
						android:paddingRight="8dp"
						/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/cardview_size_label"
						android:fontFamily="sans-serif"
						android:textAppearance="?android:textAppearanceSmall"
						android:textSize="11sp"
						android:textColor="?android:attr/textColorSecondary"
						/>

					<TextView
						android:id="@+id/size"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:fontFamily="sans-serif"
						android:paddingLeft="4dp"
						android:textAppearance="?android:textAppearanceSmall"
						android:textSize="11sp"
						android:textColor="?android:attr/textColorSecondary"
						/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
